[project]
name = "dragonfly.mantissecurity.org"
description = "Public API for our projects"
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@darbia.dev" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uvicorn[standard]==0.22.0",
    "fastapi==0.95.1",
    "sentry-sdk[fastapi]==1.25.1",
    "aiohttp==3.8.4",
    "yara-python==4.3.1",
    "letsbuilda-pypi==4.0.0",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/mantissecurity/dragonfly.mantissecurity.org/"
documentation = "https://docs.mantissecurity.org/dragonfly.mantissecurity.org/"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "ruff",
    "pre-commit",
]
tests = [
    "pytest",
    "httpx", # for fastapi.testclient.TestClient
]
docs = [
    "sphinx",
    "furo",
    "sphinx-autoapi",
    "releases",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "dragonfly.__version__" }

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "tests -r a -v --doctest-modules src"

[tool.ruff]
line-length = 120
